fixed abberant right pane overflow behavior

--- a/styles.css
+++ b/styles.css
@@ -107,8 +107,8 @@ div.field {
 
 div.field div.error {
     position: absolute;
-    top: 3.7em;
-    font-size: 0.8em;
+    top: 2.7rem;
+    font-size: 0.7em;
     color: #c00;
 }
 
@@ -231,12 +231,12 @@ button {
 
     .toptext p {
         max-width: 650px;
-        font-size: 1.5em;
+        font-size: 1.3em;
     }
 
     .content-box {
         height: 100%;
-
+        overflow: auto;
     }
 
     .logo-float {
